--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(8px + 2vmin);
   color: white;
+  text-align: center;
+}
+
+p {
+  margin: 6px 0;
 }
 
 code {
